<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="author_name">Monica Peters</string>
    <string name="author_email">MoniGarr@Yahoo.com</string>
    <string name="author_website">MoniGarr.com</string>
    <string name="nanodegree_text">MY NANODEGREE APPS!</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone_app">CAPSTONE APP</string>
    <string name="action_settings">Settings</string>
    <string name="open_app">This button will launch my </string>
</resources>
