<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/nanodegree_text"
        android:layout_margin="33dp"
        android:layout_centerHorizontal="true"
        android:text="@string/nanodegree_text" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_stairs"/>

    <Button
        android:id="@+id/spotify_button"
        android:layout_margin="7dp"
        android:layout_width="250dp"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:background="@color/button_bg_forest"
        android:textColor="@color/text_stairs"
        android:layout_below="@id/nanodegree_text"
        android:text="@string/spotify_streamer"
        android:onClick="sendMessage" />

    <Button
        android:id="@+id/scores_button"
        android:layout_margin="7dp"
        android:layout_width="250dp"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:background="@color/button_bg_corduroy"
        android:textColor="@color/text_stairs"
        android:layout_below="@id/spotify_button"
        android:text="@string/scores_app"
        android:onClick="sendMessage" />

    <Button
        android:id="@+id/library_button"
        android:layout_margin="7dp"
        android:layout_width="250dp"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:background="@color/button_bg_forest"
        android:textColor="@color/text_stairs"
        android:layout_below="@id/scores_button"
        android:text="@string/library_app"
        android:onClick="sendMessage" />

    <Button
        android:id="@+id/builditbigger_button"
        android:layout_margin="7dp"
        android:layout_width="250dp"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:background="@color/button_bg_corduroy"
        android:textColor="@color/text_stairs"
        android:layout_below="@id/library_button"
        android:text="@string/build_it_bigger"
        android:onClick="sendMessage" />

    <Button
        android:id="@+id/xyzreader_button"
        android:layout_margin="7dp"
        android:layout_width="250dp"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:background="@color/button_bg_forest"
        android:textColor="@color/text_stairs"
        android:layout_below="@id/builditbigger_button"
        android:text="@string/xyz_reader"
        android:onClick="sendMessage" />

    <Button
        android:id="@+id/capstone_button"
        android:layout_margin="7dp"
        android:layout_width="250dp"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:background="@color/button_bg_appeal"
        android:textColor="@color/text_stairs"
        android:layout_below="@id/xyzreader_button"
        android:text="@string/capstone_app"
        android:onClick="sendMessage" />

</RelativeLayout>
